<resources>
    <string name="app_name">Media</string>
    <string name="login_text">Hey, \nLogin Now!</string>
    <string name="email_text">Enter your email</string>
    <string name="login">Login</string>
    <string name="password_text">Enter your password</string>
    <string name="signup_text">Do you haven\'t account? create.</string>
    <string name="forgot_password">Forgot password!</string>
    <string name="hey_sign_up_now">Hey, \nSignUp now!</string>
    <string name="new_password">New password</string>
    <string name="create_an_account">Create an account</string>
    <string name="do_you_have_a_account_login">Do you have a account? login</string>
    <string name="confirm_password">Confirm password</string>
</resources>